--- a/ArmyBasePRG282/ArmyBasePRG282.csproj
+++ b/ArmyBasePRG282/ArmyBasePRG282.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomException.cs" />
     <Compile Include="Datahandler.cs" />
     <Compile Include="EnemyBuilding.cs" />
     <Compile Include="Form1.cs">
@@ -86,6 +87,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -112,6 +114,21 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\G4_supergaleb_let.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\giphy.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\japanese-fighter-bomber.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\animated-aeroplane-image-0057.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\giphyv.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
